--- a/platiniumtime/templates/principal.html
+++ b/platiniumtime/templates/principal.html
@@ -25,7 +25,7 @@
         <div class="container2">
             <div class="img.container">
                 <h2>Somos <span class="color-acento">Platinium time </span></h2>
-                <p>Platinium time es una tienda totalmente dispuesta a estar en la parte mas minima para poder conseguir
+                <p>Platiniummmmm time es una tienda totalmente dispuesta a estar en la parte mas minima para poder conseguir
                     lo que quieras en temas de relojeria y joyeria. <br>Puedes confiar en nosotros siempre que quieras comprar un producto</p>
             </div>
         </div>
